--- a/go-server/www/index.html
+++ b/go-server/www/index.html
@@ -32,6 +32,9 @@
   <script src="js/side-chooser.js"></script>
   <script src="js/actions-controller.js"></script>
   <script src="js/ajsr-console.js"></script>
+  <script>
+    ajsrConsole.startTime();
+  </script>
   
   <script>
     window.actionsController.new( "actions-controller-container", "SAMSUNG-GENERIC-REMOTE", "Samsung 1" );
