Improve remote look

--- a/go-server/www/index.html
+++ b/go-server/www/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title></title>
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
+
+  <link rel="stylesheet" href="remotes/Samsung_BN59-00940A/styles.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
   </script>
   
   <script>
-    window.actionsController.new( "actions-controller-container", "SAMSUNG-GENERIC-REMOTE", "Samsung 1" );
+    window.actionsController.new( "actions-controller-container", "Samsung_BN59-00940A", "Samsung 1" );
     window.actionsController.new( "actions-controller-container", "TALK", "Say stuff" );
   </script>
 </body>
