--- a/go-server/www/index.html
+++ b/go-server/www/index.html
@@ -6,7 +6,8 @@
 
   <title></title>
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/timeline.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -20,7 +21,11 @@
 
   <div id="chooser-container" class="side-left"></div>
   <div class="middle">
-
+    <div class="timeline">
+      <div class="clock"></div>
+      <div class="controls"></div>
+      <div class="menu"></div>
+    </div>
   </div>
   <div id="actions-controller-container" class="side-right">
 
