--- a/go-server/www/index.html
+++ b/go-server/www/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -8,12 +9,16 @@
 
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/timeline.css">
+  <link rel="stylesheet" href="css/tool-bar.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 
   <link rel="stylesheet" href="remotes/Samsung_BN59-00940A/styles.css">
+  <script>
+    var SERVICES_URL = "http://192.168.3.104:8000/eventsreceiver"
+  </script>
 </head>
 
 <body>
@@ -21,10 +26,49 @@
 
   <div id="chooser-container" class="side-left"></div>
   <div class="middle">
+    <div class="tool-bar">
+      <ul>
+        <li>
+          <div class="btn-info"></div>
+        </li>
+        <li class="new-space">
+        </li>
+        <li>
+          <div class="btn-play"></div>
+        </li>
+        <li>
+          <div class="btn-pause"></div>
+        </li>
+        <li>
+          <div>Current Time:
+            <div id="display-current-time"></div>
+          </div>
+        </li>
+        </li>
+        <li class="new-space">
+        </li>
+        <li>
+          <div>Services IP:
+            <div >
+                  <input id="input-services-ip" type="text" name="" value="">
+                  <button type="button" class="" data-url="" onclick="(function(){ 
+                    var el = document.getElementById('input-services-ip');
+                    var val = el.value;
+                    console.log('Change IP to: ', val);
+                    window.SERVICES_URL = 'http://'+ val +':8000/eventsreceiver';
+                  }())">Update IP
+                  </button>
+            </div>
+            <div class="btn-ip-change-apply"></div>
+          </div>
+        </li>
+      </ul>
+    </div>
     <div class="timeline">
       <div class="clock"></div>
       <div class="controls"></div>
       <div class="menu"></div>
+      <div id="time-events-container"></div>
     </div>
   </div>
   <div id="actions-controller-container" class="side-right">
@@ -40,10 +84,12 @@
   <script>
     ajsrConsole.startTime();
   </script>
-  
+
   <script>
-    window.actionsController.new( "actions-controller-container", "Samsung_BN59-00940A", "Samsung 1" );
-    window.actionsController.new( "actions-controller-container", "TALK", "Say stuff" );
+    window.actionsController.new("actions-controller-container", "Samsung_BN59-00940A", "Samsung 1");
+    window.actionsController.new("actions-controller-container", "TALK", "Say stuff");
+    timeCanvas.init();
   </script>
 </body>
+
 </html>
