--- a/go-server/www/index.html
+++ b/go-server/www/index.html
@@ -10,51 +10,17 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/timeline.css">
   <link rel="stylesheet" href="css/tool-bar.css">
+  <link rel="stylesheet" href="node_modules/ajsr-notify/dist/css/tmplt-default.min.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 
   <link rel="stylesheet" href="remotes/Samsung_BN59-00940A/styles.css">
-  <script>
 
-    var updateIp = function () {
-
-      var el = document.getElementById('input-services-ip');
-      var val = el.value;
-      console.log('Change IP to: ', val);
-
-      window.refreshServerData({
-        SERVER_IP: val
-      })
-
-      ajsrnotify({
-        msg: '<b>IP!</b> Services IP has changed!',
-        type: "success", // null, "error", "info", "alert", "success"
-        position: "center", // null, "right", "left"
-        timeout: 2000,
-        theme: null // null, "windows-98"
-      })
-
-
-    }
-
-    //var SERVICES_URL = "http://192.168.3.104:8000/eventsreceiver"
-    var SERVER_IP = "192.168.3.104",
-      SERVER_PORT = "8000",
-      SERVICES_URL = "http://" + SERVER_IP + ":" + SERVER_PORT + "/eventsreceiver";
-
-    window.refreshServerData = function (newData) {
-      if (newData.SERVER_IP != null) window.SERVER_IP = newData.SERVER_IP;
-      if (newData.SERVER_PORT != null) window.SERVER_PORT = newData.SERVER_PORT;
-      SERVICES_URL = "http://" + SERVER_IP + ":" + SERVER_PORT + "/eventsreceiver";
-    };
-
-  </script>
 </head>
 
 <body>
-  hello world!
 
   <div id="chooser-container" class="side-left"></div>
   <div class="middle">
@@ -80,14 +46,13 @@
         <li class="new-space">
         </li>
         <li>
-          <div>Services IP:
+          <div>Services server and port:
             <div>
               <input id="input-services-ip" type="text" name="" value="">
-              <button type="button" class="" data-url="" onclick="(function(){ 
-                    window.updateIp();
-
-                  }())">Update IP
+              <button type="button" class="" data-url="" onclick="App.updateServer('input-services-ip')">Update
               </button>
+              <button type="button" class="" data-url="" onclick="App.setDefaultServer()">Default
+                </button>
             </div>
             <div class="btn-ip-change-apply"></div>
           </div>
@@ -118,9 +83,83 @@
 
   <script>
     window.actionsController.new("actions-controller-container", "Samsung_BN59-00940A", "Samsung 1");
+    //window.actionsController.new("actions-controller-container", "Samsung_BN59-01175N", "Samsung 2");
     window.actionsController.new("actions-controller-container", "TALK", "Say stuff");
     timeCanvas.init();
   </script>
+
+<script>
+
+    //var SERVICES_URL = "http://192.168.3.104:8000/eventsreceiver"
+    // var SERVER_IP = "192.168.3.104",
+    //SERVER_PORT = "8000",
+    //   SERVICES_URL = "http://" + SERVER_IP + ":" + SERVER_PORT + "/eventsreceiver";
+
+    var SERVICES_HOST = null;
+    var SERVICES_URL = null;
+
+    var App = {}
+
+    App.setDefaultServer = function () {
+      //var SERVICES_HOST = "http://" + window.location.host;
+      SERVICES_HOST = "http://" + window.location.host;
+      SERVICES_URL = SERVICES_HOST + "/eventsreceiver";
+      document.getElementById('input-services-ip').value = SERVICES_HOST;
+
+      ajsrnotify({
+        msg: '<b>IP!</b> Services server was set to: "' + SERVICES_HOST + '" ',
+        type: "success", // null, "error", "info", "alert", "success"
+        position: "center", // null, "right", "left"
+        timeout: 2000,
+        theme: null // null, "windows-98"
+      })
+
+    };
+
+    App.updateServer = function () {
+
+      console.log("updateServer!");
+
+      var el = document.getElementById('input-services-ip');
+      var val = el.value;
+      console.log('Change IP to: ', val);
+      App.refreshServerData(val);
+    };
+
+    App.refreshServerData = function (servicesHost) {
+
+      if (servicesHost.trim().length === 0) {
+
+        ajsrnotify({
+          msg: '<b>New services URL?</b> Form is null',
+          type: "error", // null, "error", "info", "alert", "success"
+          position: "center", // null, "right", "left"
+          timeout: 2000,
+          theme: null // null, "windows-98"
+        })
+
+      } else {
+
+        SERVICES_URL = servicesHost + "/eventsreceiver";
+
+        ajsrnotify({
+          msg: '<b>IP!</b> Services server has changed to: "' + servicesHost + '" ',
+          type: "success", // null, "error", "info", "alert", "success"
+          position: "center", // null, "right", "left"
+          timeout: 2000,
+          theme: null // null, "windows-98"
+        })
+
+      }
+
+    };
+
+    // init 
+    App.setDefaultServer();
+
+
+  </script>
+
 </body>
 
 </html>
